working on new version of mtom

--- a/intention motor representation with corrado sinigaglia/intention and motor action.ppr.r1.final.tex
+++ b/intention motor representation with corrado sinigaglia/intention and motor action.ppr.r1.final.tex
@@ -1,8 +1,8 @@
 %!TEX TS-program = xelatex
 %!TEX encoding = UTF-8 Unicode
 
-%\def \papersize {a4paper}
-\def \papersize {letterpaper}
+\def \papersize {a4paper}
+%\def \papersize {letterpaper}
 
 \documentclass[12pt,\papersize]{extarticle}
 % extarticle is like article but can handle 8pt, 9pt, 10pt, 11pt, 12pt, 14pt, 17pt, and 20pt text
@@ -10,21 +10,21 @@
 \def \ititle {Intention and motor representation in purposive action}
 \def \isubtitle {}
 \def \iauthor {}
-%\def \iauthor {S. Butterfill* \& C. Sinigaglia**
-%\\ 
-%**Department of Philosophy, University of Warwick, UK
-%\\ 
-%***Dipartimento di Filosofia, Università degli Studi di Milano, Italia}
-%\def \iemail{s.butterfill@warwick.ac.uk}
-%\date{}
-
-\input{$HOME/Documents/submissions/preamble_steve_paper2}
-%\author{}
-\author {S. Butterfill* \& C. Sinigaglia**
+\def \iauthor {S. Butterfill* \& C. Sinigaglia**
 \\ 
 **Department of Philosophy, University of Warwick, UK
 \\ 
 ***Dipartimento di Filosofia, Università degli Studi di Milano, Italia}
+\def \iemail{s.butterfill@warwick.ac.uk}
+%\date{}
+
+\input{$HOME/Documents/submissions/preamble_steve_paper2}
+%\author{}
+%\author {S. Butterfill* \& C. Sinigaglia**
+%\\ 
+%**Department of Philosophy, University of Warwick, UK
+%\\ 
+%***Dipartimento di Filosofia, Università degli Studi di Milano, Italia}
 \date{}
 
 
