--- a/mindreading/minimal theory of mind (new version)/minimal theory of mind.nv.tex
+++ b/mindreading/minimal theory of mind (new version)/minimal theory of mind.nv.tex
@@ -61,46 +61,197 @@ As we will explain, this has consequences
 for interpreting a range of findings concerning infants', adults' and nonhumans' performances on theory of mind tasks.
 It may also help us to understand what enables those with limited cognitive resources or little conceptual sophistication, such as infants, chimpanzees, scrub-jays and human adults under load, to track, within limits, facts about perceptions and beliefs.
 
-In this section we first defend the theoretical coherence of our question and then explain the findings which motivate facing it.
+In this section we defend explain our question; in the next section we introduce the findings which motivate facing it before starting to answer it in the third section.
 
-To many our question may initially appear incomprehensible.
+Some may find our question initially incomprehensible.
 Could abilities to track false beliefs (say) really involve anything other than representing false beliefs?
 To see the possibility of a positive answer it may help to consider a non-mental analogy.
 What could someone represent that would enable her to track, at least within limits, the toxicity of potential food items?
 Here the most straightforward answer (she could represent their toxicity) is clearly not the only one.
-After all, someone might track toxicity by representing odour or by representing visual features associated with putrefaction, say.
-Suppose Sin\'ead has no conception of toxins but represents the odours given off by food items and 
-treats those which she thinks smell foul as dangerous to eat,
+After all, someone might track toxicity by representing odours or by representing visual features associated with putrefaction, say.
+Suppose Sin\'ead has no conception of toxins but represents the odours of food items and 
+treats those with foul odours as dangerous to eat,
 so that she would not normally offer them to friends or family
-nor conceal them from her competitors.
-This brings nutritional and competitive benefits thanks to facts about the the toxicity of food.
+nor conceal them from competitors.
+This brings nutritional and competitive benefits obtaining which depends on facts about toxicity.
 If Sin\'ead tends to behave in this way because of these benefits, 
-it follows that she has an ability to track, in a limited but useful range of cases,  toxicity; and this ability involves  representing  odour only.
-Our question, put roughly, is whether false beliefs have something like an odour.
+representing odours enables her to track, in a limited but useful range of cases,  toxicity.
+Our question, put very roughly, is whether   belief has something like an odour.
 
 To make the question more precise it is useful to distinguish 
 theory of mind abilities from theory of mind cognition.  
 A  \textit{theory of mind ability} is an ability that exists in part because exercising it brings benefits obtaining which depends on exploiting or influencing facts about others’ mental states.
 To illustrate,
-suppose that Hannah is able to discern whether Isabel's eyes are in view,
-that Hannah exercises this ability to escape detection while stealing from Isabel,
+suppose that Hannah is able to discern whether another's eyes are in view,
+that Hannah exercises this ability to escape detection while stealing from others,
 that Hannah's ability exists in part because it benefits her in this way,
 and 
-that Hannah's escaping detection depends on exploiting a fact about Isabel's mental states (namely that she cannot usually see Hannah's acts of theft when Hannah doesn't have Isabel's eyes in view).
+that Hannah's escaping detection depends on exploiting a fact about other's mental states (namely that they usually cannot  see Hannah's acts of theft when Hannah doesn't have their eyes in view).
 Then Hannah has a theory of mind ability.
 (This is not supposed to be a plausible, real-world example but only to illustrate what the definition requires.)
-By an ability to \textit{track} perceptions or beliefs (say), we mean a theory of mind ability which involves exploiting or influencing facts about perceptions or beliefs, respectively.
-By contrast, \textit{theory of mind cognition} paradigmatically involves ascribing propositional attitudes such as beliefs, desires and intentions to give rationalising causal explanations of action.  
-This distinction is important because the facts about other minds which theory of mind abilities exploit are not necessarily the facts which are represented in theory of mind cognition.  
+An ability to \textit{track} perceptions or beliefs (say) is a theory of mind ability which involves exploiting or influencing facts about these states.
+By contrast, \textit{theory of mind cognition} involves representing mental states or processes as such.
+And \textit{full-blown} theory of mind cognition involves  representing propositional attitudes such as beliefs, desires and intentions to construct reason-giving, causal explanations of action.  
+The distinction between theory of mind abilities and theory of mind cognition matters because the facts about other minds which theory of mind abilities exploit are not necessarily the facts which are represented in theory of mind cognition.  
 To return to the illustration, Hannah is able, within limits, to exploit facts about what others perceive without representing perceptions as such. 
 She has a theory of mind ability while possibly lacking any theory of mind cognition.
 
+It should be uncontroversial that some theory of mind abilities do not necessarily involve any theory of mind cognition at all. 
+Our question concerns abilities to track what others perceive and believe, including their false beliefs; these have been central in psychological research.
+Can anything less than full-blown theory of mind cognition  explain systematic success on a range of false belief tasks?
+
+
+\section{Motivation}
+Our question is theoretical: it concerns 
+not what anyone does represent
+but what someone could represent that would enable her, at least within limits, to track perceptions, beliefs and other propositional attitudes.
+The motivation for facing up to this question is, of course, partly empirical.
+
+Start with ordinary adult humans.
+Since these subjects can represent beliefs and other propositional attitudes as such, 
+it is natural to assume that such representations underpin their abilities to track perceptions and beliefs.
+But is this natural assumption correct?
+
+To see that it might not be, consider a further question.
+Are processes in which representations of perceptions and beliefs feature automatic?
+Roughly speaking,
+a process is \emph{automatic} if whether it occurs is to a significant degree independent of its relevance to the particulars of the subject's motives and aims.
+(Note that a process may occur spontaneously without thereby being automatic.)  
+Some evidence suggests that, for ordinary adult humans, belief ascription is automatic.
+For example,
+\citet{kovacs_social_2010} asked adults to identify the location of a ball.
+They found that adults were significantly slower to identify the ball's location when an onlooker had a false belief about the location of the ball,
+even though the onlooker's belief was not relevant to the task at all.
+Relatedly, \citet{Samson:2010jm} provide evidence that identifying what another perceives is automatic;  this finding is indirectly supported by  evidence that identifying what another perceives is not disrupted by a secondary executive task \citep{qureshi:2010_executive}.
+Taken together, these findings suggest that, at least in adults, some processes involving representation of perception and belief are automatic.
+
+But there is also a body of evidence supporting a different conclusion.
+\citet{back:2010_apperly} found that subjects are significantly slower to answer an unexpected question about another's belief when that belief is false compared to when it is true \citep[see also][]{apperly:2006_belief}.
+This suggests that, at least in adults, belief ascription is not automatic.
+There is also evidence that, even in relatively simple situations, using representations of others' beliefs is not automatic \citep{Keysar:2003xu,apperly:2010_limits}.
+The case for nonautomaticity is indirectly supported by evidence that reasoning about perceptions and beliefs---and even merely holding in mind what another believes, where no inference is required---involves a measurable processing cost  \citep{apperly:2008_back,apperly:2010_limits}, consumes attention and working memory in fully competent adults (\citealp{en_1698, lin:2010_reflexively, en_1547} experiments 4-5), may require inhibition \citep{bull:2008_role} and makes demands on executive function \citep{apperly:2004_frontal,samson:2005_seeing}.
+These findings, taken together, suggest that some processes involving representation of perception and belief are not automatic.
+
+The question was whether, in adult humans, the processes in which representations of perception and belief feature are automatic.  
+We have just seen that there is a systematic incongruity in the evidence.
+The incongruity  cannot easily be explained away by appeal to simple methodological factors or extraneous task demands.
+For instance, it may be tempting to suppose that the incongruity can be explained by distinguishing between linguistic and nonlinguistic tasks.  
+But belief ascription fails to be automatic even on some nonlinguistic tasks \citep[e.g.][]{apperly:2004_frontal}, and we know of no reason to assume that belief ascription could not be automatic on verbal theory of mind tasks.
+
+If the incongruity is not a methodological artefact, how should we interpret the evidence?
+Perhaps it should be taken at face value.
+In other cases, such as number and causation, it is already quite widely accepted that, in adult humans, some abilities to track these things are automatic whereas others are not.\footnote{
+On number: \citet{trick:1994_small};
+on causation: \citet{Michotte:1946nz}, \citet{Scholl:2004dx}.
+}
+The evidence suggests that the same may be true for perception and belief.
+In adult humans, some theory of mind abilities involve automatic processes whereas others depend on nonautomatic processes. 
+
+A closely related view has already been elaborated and defended in more detail by
+\citet[]{Apperly:2009ju},
+although their argument complements ours by drawing  primarily on developmental and comparative research. 
+According to them,
+adults may enjoy efficient but inflexible forms of theory of mind cognition in addition to the full-blown form which involves representing beliefs and other propositional attitudes as such.
+While aspects of this conjecture have already been tested \citep[]{Samson:2010jm, en_2397, surtees_direct_2011}, it raises two complementary questions (as Apperly \& Butterfill themselves note).  
+
+First, why isn't all theory of mind cognition automatic?
+Even without knowing in any detail how theory of mind cognition is implemented, it is plausible that what makes full-blown theory of mind cognition demanding is some feature, or combination of features, of the propositional attitudes.%
+\footnote{
+Several hypotheses about which feature of the propositional attitudes explains why full-blown theory of mind cognition is cognitively and conceptually demanding have been defended \citep[e.g.][]{en_1263, en_634, en_1269, en_78, en_81, en_404, 	%en_687, %bibtex error authors and year too similar
+	en_643, en_1130}.  
+More than one feature may contribute. 
+We are agnostic about which feature or features are to blame.
+}  
+%
+On any standard view, propositional attitudes form complex causal structures, have arbitrarily nest-able contents, interact with each other in uncodifiably complex ways and are individuated by their causal and normative roles in explaining thoughts and actions \citep[]{en_809, en_249}.  If anything should consume working memory and other scarce cognitive resources, it is surely representing states with this combination of properties.
+
+Second, how could theory of mind cognition be automatic?
+Automatic processes do not usually significantly depend on inhibition, working memory or attention.
+***HERE
+
+\section{The need for a constructive approach}
+Davidson ...
+
+This is reflected in the dichotomy between behaviour reading (P&Vonk) \& full-blown ToM (Baillargeon review).
+
+Davidson might be right about ordinary, commonsense psychology.
+
+So a constructive approach is needed.
+
+
+\section{***}
+
+
+
+
+There is a growing body of evidence that theory of mind abilities are widespread.  Scrub-jays selectively re-cache their food in ways that deprive competitors of knowledge of its location \citep[]{Clayton:2007fh}.  Chimpanzees select routes to approach food which conceal them from a competitor’s view \citep[]{en_1546}, and retrieve food using strategies that optimize their return given what a dominant competitor has seen \citep[]{en_1545}.  And children in their second year use pointing to provide information to others \citep[]{en_1093} in ways that reflect a partner’s ignorance or knowledge \citep[]{en_1699}, as well as providing more information to ignorant than knowledgeable partners when making requests \citep[]{en_1140}.  One-year-old children also predict actions of agents with false beliefs about the locations of objects \citep[]{en_1092, en_1208} and choose different ways of interacting with others depending on whether their beliefs are true or false \citep[]{en_1783,Knudsen:2011fk,southgate:2010fb}.  And in much the way that irrelevant facts about the contents of others’ beliefs modulate adult subjects’ response times, such facts also affect how long 7-month-old infants look at some stimuli \citep[]{kovacs_social_2010}.
+
+Is it already known what young children, chimpanzees or scrub-jays represent that enables them, within limits, to track others’ perceptions or beliefs?   
+Some hypotheses have been offered, 
+but each faces significant objections, as we shall briefly outline here.
+We do not suggest that these hypotheses are known to be false, only that they are not known to be true.
+This is what motivates articulating and testing  alternative hypotheses, such as the minimal theory of mind hypothesis we develop in following sections.
+
+
+
+
+
+The most straightforward answer would be to suppose that they represent perceptions, beliefs and other propositional attitudes as such 
+(see, e.g.\ \citealp{en_1138} and \citealp{en_1691} on infants).  
+But this answer faces several objections.  A body of evidence from humans suggests that representing beliefs requires conceptual sophistication, for it has a protracted developmental course stretching over several years \citep[]{en_87, en_89} and its acquisition is tied to the development of executive function \citep[]{en_410, en_1130} and language \citep[]{en_1209}.  Infants, scrub-jays and chimpanzees are all deficient in these.  Development of reasoning about beliefs in humans may also be facilitated by explicit training \citep[]{en_85} and environmental factors such as siblings \citep[]{en_507, en_1299}.  
+This is evidence that representations of belief in humans typically emerge from extensive participation in social interactions (as \citealp{en_1300} suggest).  
+If any of this is right, we must reject the hypothesis that infants, scrub jays and chimpanzees are representing propositional attitudes like belief as such.
 
 
 
 
 
 
+***
+
+Some have hypothesised that infants', chimpanzees' or scrub-jays' theory of mind abilities 
+do not involve any theory of mind cognition at all
+but are instead based on 
+representations of nonintentional behaviour only.\footnote{ 
+	On scrub-jays: \citet{en_1417};
+	 on chimpanzees: \citet{en_1413}; 
+	 on young children: \citet{perner:1988_developing,en_1168, en_1169}.
+}  
+Here we must be careful to distinguish two types of  hypothesis.
+One says of a particular group of subjects, nonhumans for instance, that their theory of mind abilities could in principle be fully explained by hypothetical behaviour reading capacities.
+
+
+A second, much stronger hypothesis is that a particular group of subjects' theory of mind abilities are explained by their actual behaviour reading capacities.
+One difficulty for this second type of hypothesis is that relatively little is known about actual behaviour reading capacities.\footnote{
+Key studies include
+	\citet{Newtson:1976ni}, 
+	\citet{Byrne:1999jk},
+	\citet{Baldwin:2001rs},
+	\citet{Saylor:2007pj} and
+	\citet{Baldwin:2008mw}.
+}
+Applied to infants, scrub-jays or chimpanzees several objections have been raised \citep[]{Apperly:2009ju,en_1553, Clayton:2007fh, en_1691, en_1393}. 
+
+The first hypothesis is that, for some subjects, some actual theory of mind abilities can be explained by those subjects actual behaviour reading capacities.
+This is plausible, although relatively little is known about actual behaviour reading capacities.\footnote{
+Key studies include
+	\citet{Newtson:1976ni}, 
+	\citet{Byrne:1999jk},
+	\citet{Baldwin:2001rs},
+	\citet{Saylor:2007pj} and
+	\citet{Baldwin:2008mw}.
+}
+This hypothesis faces several objections \citep[]{en_1553, Clayton:2007fh, en_1691, en_1393}. 
+
+
+
+
+\section{***}
+
+But what could other, non full-blown forms of theory of mind cognition involve representing?
+Several related proposals exist.  
+To mention only those we draw most directly on, Gomez (\citeyear[][p.\ 730]{en_1259}) has emphasized primitive intentional relations to objects established by gaze, O’Neil and Doherty have separately discussed a notion of engagement with objects (\citealp{en_1159, en_1140}), Call and Tomasello (\citeyear[][p.\ 58]{en_1669}) have suggested that chimpanzees track the `likely target' of others’ visual access and understand something about its effects on behaviour, and Whiten (\citeyear[]{en_1415, en_1416}) uses the notion of an `intervening variable' to explain primitive theory of mind notions.  These are illuminating ideas and what follows can be seen as an elaboration and partial synthesis of them.  
+The result---minimal theory of mind---is unlike its precursors in that it is rich enough to explain systematic success on a range of false belief tasks.  Our approach is novel in this and others respects to which we return (in the Conclusion) after presenting the substance of our account.
 
 
 
